# apimanager-service

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs
gui/: env-cmdrc
src/: lib.rs  main.rs  static_routes.rs
