[package]
name = "apimanager-service"
version = "0.1.1"
edition = "2021"

[build-dependencies]
dotenv = "0.15"
env_logger = "0.11.6"
log = "0.4"
walkdir = "2.5.0"
phf = { version = "0.11.1", default-features = false }
phf_codegen = "0.11.1"

[dependencies]
tokio = { version = "1.43", features = ["full"] }
axum = { version="0.8.1"}
reqwest = "0.12.12"
dotenv = "0.15"
phf = { version = "0.11.1", default-features = false }
